Moved HistoryRecord data to history feed